...
      ),
      child: Column(
        children: [
          TextFormField(
            //initialValue: providers.search,
            controller: controllerSearch,
            key: Key("buscador"),
            onChanged: (value) => {
              setState(() {}),
              //print("SearchField ::" + value),
              providers.search = value
              //context.read<ProviderClient>().search = value
            },
...
