...
    PopupMenuButton button(id) {
      return PopupMenuButton(
          //key: UniqueKey(),
          key: Key("$id"),
          itemBuilder: (_) => <PopupMenuItem<String>>[
                PopupMenuItem<String>(
                    key: Key('ver'),
                    child: Row(
                      mainAxisAlignment: MainAxisAlignment.spaceAround,
                      children: [
                        Icon(
                          Icons.pageview,
                          color: Colors.blue,
...
